--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   padding: 2% 5%;
 }
 
+body,
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 .App * {
   box-sizing: border-box;
 }
@@ -32,6 +37,7 @@ input[type="number"] {
 
 .city {
   width: 250px;
+  border-radius: 20px;
 }
 
 #city-search {
@@ -39,6 +45,7 @@ input[type="number"] {
   flex-direction: column;
   margin: auto;
   position: relative;
+  margin-top: 35px;
 }
 
 .suggestions {
@@ -84,6 +91,23 @@ input[type="number"] {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+  margin-top: 20px;
+  margin-bottom: 12px;
+
+  font-size: 16px;
+  border: 2px solid #1a1a1a;
+  border-radius: 15px;
+  background-color: transparent;
+  /* color: #3b3b3b; */
+  font-weight: 600;
+  padding: 8px 12px;
+}
+
+.details-btn:hover {
+  color: #fff;
+  background-color: rgb(24, 24, 215);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
 }
 
 .alerts-container {
@@ -93,3 +117,58 @@ input[type="number"] {
   width: 250px;
   z-index: 1000;
 }
+
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* margin-top: 80px; */
+  margin-bottom: 100px;
+  border: solid rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+}
+
+@media (max-width: 768px) {
+  .charts-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 120px;
+  background-color: rgb(24, 24, 215);
+  /* margin-bottom: 100px; */
+  border-radius: 12px;
+  color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.searchContainers {
+  /* border: solid black; */
+  height: 160px;
+}
+
+.eventListItem {
+  border: solid black;
+  margin-bottom: 30px;
+  border-radius: 12px;
+}
+
+.eventTitle {
+  border-bottom: black solid;
+  padding-bottom: 15px;
+}
+
+/* .flagContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.flag {
+  height: 50px;
+  display: block;
+  border-radius: 8px;
+} */
