--- a/src/App.css
+++ b/src/App.css
@@ -139,27 +139,56 @@ input[type="number"] {
   align-items: center;
   width: 100%;
   height: 120px;
-  background-color: rgb(24, 24, 215);
+  background-color: rgb(240, 250, 251);
   /* margin-bottom: 100px; */
   border-radius: 12px;
-  color: white;
+  color: black;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  /* border: solid black; */
+}
+
+.heading {
+  background-color: white;
+  width: 200px;
+  height: 50px;
+  border-radius: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.searchCountContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .searchContainers {
   /* border: solid black; */
   height: 160px;
+  /* border: solid black 1px; */
+  width: 280px;
+  border-radius: 18px;
+  margin-top: 50px;
 }
 
 .eventListItem {
   border: solid black;
   margin-bottom: 30px;
   border-radius: 12px;
+  background-color: rgb(240, 250, 251);
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .eventTitle {
   border-bottom: black solid;
   padding-bottom: 15px;
+  padding-top: 15px;
+  background-color: white;
+  height: 100%;
+  border-top: solid black;
+  background-color: white;
 }
 
 /* .flagContainer {
@@ -172,3 +201,7 @@ input[type="number"] {
   display: block;
   border-radius: 8px;
 } */
+
+.details-btn {
+  background-color: white;
+}
