--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
   text-align: center;
-  padding: 2% 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+  background-color: #cbd1cf;
 }
 
 body,
@@ -37,7 +39,7 @@ input[type="number"] {
 
 .city {
   width: 250px;
-  border-radius: 20px;
+  border-radius: 30px !important;
 }
 
 #city-search {
@@ -46,6 +48,7 @@ input[type="number"] {
   margin: auto;
   position: relative;
   margin-top: 35px;
+  border-radius: 30px;
 }
 
 .suggestions {
@@ -84,6 +87,12 @@ input[type="number"] {
   position: relative;
 }
 
+.eventCount {
+  border-radius: 12px;
+  padding-left: 10px;
+  border: solid lightgray 1px;
+}
+
 .details-btn {
   right: 5px;
   bottom: 5px;
@@ -105,7 +114,7 @@ input[type="number"] {
 
 .details-btn:hover {
   color: #fff;
-  background-color: rgb(24, 24, 215);
+  background-color: #2c8ba0;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
@@ -167,18 +176,24 @@ input[type="number"] {
   /* border: solid black; */
   height: 160px;
   /* border: solid black 1px; */
-  width: 280px;
+  width: 400px;
   border-radius: 18px;
-  margin-top: 50px;
+  margin-top: 200px;
+  margin-bottom: 200px;
+  z-index: 2;
+  background-color: white;
 }
 
 .eventListItem {
-  border: solid black;
+  /* border: solid black; */
   margin-bottom: 30px;
   border-radius: 12px;
-  background-color: rgb(240, 250, 251);
+  background-color: rgba(211, 211, 211, 0.1);
+  background-color: white;
+  border-radius: 18px;
   /* display: flex;
   flex-direction: column; */
+  z-index: 4;
 }
 
 .eventTitle {
@@ -186,12 +201,27 @@ input[type="number"] {
   padding-bottom: 15px;
   padding-top: 15px;
   background-color: white;
-  height: 100%;
-  border-top: solid black;
+  height: 80%;
   background-color: white;
+  border-radius: 18px 18px 0px 0px;
 }
 
-/* .flagContainer {
+.eventCard {
+  background-color: #38adbc;
+  border-radius: 18px;
+  background-image: url("/public/blue2.png");
+  background-size: cover;
+  z-index: 3;
+}
+
+.eventDetails {
+  background-color: white;
+  margin: 1%;
+  padding: 1%;
+  border-radius: 12px;
+}
+
+.flagContainer {
   display: flex;
   justify-content: center;
 }
@@ -200,8 +230,41 @@ input[type="number"] {
   height: 50px;
   display: block;
   border-radius: 8px;
-} */
+}
 
 .details-btn {
   background-color: white;
+}
+
+.genresChart {
+  background-color: white;
+  z-index: 2;
+  border-radius: 30px;
+}
+
+.eventsChart {
+  background-color: white;
+  z-index: 2;
+  border-radius: 30px;
+  padding: 20px;
+}
+
+.eventInfo {
+  background-color: white;
+  width: 200px;
+  border-radius: 8px;
+  border: solid black 2px;
+  display: flex;
+  justify-content: center;
+}
+
+.infoCenter {
+  display: flex;
+  justify-content: center;
+}
+
+.flag {
+  margin-left: 20px;
+  width: 50px;
+  height: 50px;
 }
