--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,6 @@ input[type="number"] {
   border: 2px solid #1a1a1a;
   border-radius: 15px;
   background-color: transparent;
-  /* color: #3b3b3b; */
   font-weight: 600;
   padding: 8px 12px;
 }
@@ -130,10 +129,9 @@ input[type="number"] {
 .charts-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  /* margin-top: 80px; */
   margin-bottom: 100px;
-  border: solid rgba(0, 0, 0, 0.2);
   border-radius: 12px;
+  width: 90%;
 }
 
 @media (max-width: 768px) {
@@ -149,11 +147,9 @@ input[type="number"] {
   width: 100%;
   height: 120px;
   background-color: rgb(240, 250, 251);
-  /* margin-bottom: 100px; */
   border-radius: 12px;
   color: black;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  /* border: solid black; */
 }
 
 .heading {
@@ -166,6 +162,14 @@ input[type="number"] {
   align-items: center;
 }
 
+.eventContentContainer {
+  position: absolute;
+  width: 100%;
+  padding: 3%;
+  background-color: #cbd1cf;
+  padding-top: 0%;
+}
+
 .searchCountContainer {
   width: 100%;
   display: flex;
@@ -173,27 +177,40 @@ input[type="number"] {
 }
 
 .searchContainers {
-  /* border: solid black; */
   height: 160px;
-  /* border: solid black 1px; */
   width: 400px;
   border-radius: 18px;
-  margin-top: 200px;
+  margin-top: 100px;
   margin-bottom: 200px;
   z-index: 2;
   background-color: white;
 }
 
+@media (max-width: 770px) {
+  .searchContainers {
+    margin-bottom: 50px;
+    width: 300px;
+  }
+}
+
+.searchChartsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 3;
+  position: relative;
+  margin-top: 160px;
+  width: 100%;
+}
+
 .eventListItem {
-  /* border: solid black; */
   margin-bottom: 30px;
   border-radius: 12px;
   background-color: rgba(211, 211, 211, 0.1);
   background-color: white;
   border-radius: 18px;
-  /* display: flex;
-  flex-direction: column; */
   z-index: 4;
+  position: relative;
 }
 
 .eventTitle {
@@ -211,7 +228,14 @@ input[type="number"] {
   border-radius: 18px;
   background-image: url("/public/blue2.png");
   background-size: cover;
-  z-index: 3;
+  z-index: 4;
+}
+
+.balloons {
+  position: relative;
+  width: 100%;
+  border-bottom: solid rgba(255, 255, 255, 0.3) 2px;
+  z-index: 1;
 }
 
 .eventDetails {
@@ -240,6 +264,7 @@ input[type="number"] {
   background-color: white;
   z-index: 2;
   border-radius: 30px;
+  margin-bottom: 50px;
 }
 
 .eventsChart {
@@ -247,6 +272,7 @@ input[type="number"] {
   z-index: 2;
   border-radius: 30px;
   padding: 20px;
+  margin-right: 10px;
 }
 
 .eventInfo {
